# m2

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  coding_agent_prompt2.md  environment.yml  pyproject.toml  requirements.lock.txt  requirements.txt  research_template_coding_agent_prompt.txt
.claude/: incidents.md  settings.json
.claude/agents/: delta-analyst.md  experiment-runner.md  paper-writer.md  trace-debugger.md
.claude/commands/: delta.md  env-check.md  exp-report.md  new-hypothesis.md  run-stage.md  verify-phase.md
.claude/hooks/: lint_changed.py
.claude/skills/add-model-component/: SKILL.md
.claude/skills/avoid-past-failures/: SKILL.md
.claude/skills/run-experiment/: SKILL.md
configs/: config.yaml  default.yaml
configs/data/: custom_dataset.yaml
configs/experiment/: baseline.yaml
configs/model/: resnet50.yaml
configs/model/backbone/: dinov2_vitb14_reg.yaml  dinov2_vitl14_reg.yaml  dinov2_vits14_reg.yaml
configs/model/detection_head/: co_detr.yaml  mask_dino.yaml  varifocanet.yaml
configs/stage/: s0_tool_baseline.yaml  s2_hand.yaml  s3_phase_frame.yaml
data/: README.md
data/annotations/egosurgery_phase/: 01_1.csv  02_1.csv  03_2.csv  03_3.csv  04_1.csv  04_2.csv  05_1.csv  05_2.csv  06_1.csv  06_2.csv  07_1.csv  07_2.csv  08_1.csv  08_2.csv  09_1.csv  10_1.csv  10_2.csv  11_1.csv  12_1.csv  13_1.csv  14_1.csv  14_2.csv  15_1.csv
data/annotations/egosurgery_tool/: instances_test.json  instances_val.json
data/splits/: ego_test.txt  ego_train.txt  ego_val.txt
docs/: TODO.md  environment.md  experiment_log.md  idea_log.md  notion_run_ledger_auto_post.md  phase0_s0_results_2026-05-26.md  reproduce_on_new_machine.md
docs/meeting_notes/: README.md
docs/reading_notes/: README.md
experiments/: README.md
experiments/_smoke_prior/s0_001_maskdino_bbox_seed42/: metrics.json  per_class_ap.json
experiments/_smoke_prior/s0_002_maskdino_bbox_seed123/: command.sh  per_class_ap.json
experiments/_smoke_prior/s0_003_maskdino_bbox_seed456/: command.sh  config.yaml  notes.md
experiments/_smoke_prior/s0_004_varifocanet_bbox_seed42/: metrics.json  per_class_ap.json
experiments/_smoke_prior/s0_005_varifocanet_bbox_seed123/: metrics.json  per_class_ap.json
experiments/_smoke_prior/s0_006_varifocanet_bbox_seed456/: command.sh  config.yaml  metrics.json  notes.md
experiments/baselines/s0_001_maskdino_bbox_seed42/: command.sh  config.yaml  metrics.json  notes.md  (+1 more)
notebooks/: README.md
paper/rebuttal/: README.md
prompts/: phase1_patch_eval_recipe.md  phase2_part1_data_pipeline.md  phase2_part1_data_pipeline_v2.md  phase2_part2_models.md  phase2_part3_s0_execution.md  phase2_part3_s0_execution_v2.md  phase2_part4_s2_s3.md  phase2_part5_s4_temporal.md  pipeline_implementation_prompt.md
scripts/: build_tool_hand_coco.py  compare_judge6.py  create_experiment.py  eval.sh  generate_copypaste_bank.py  preprocess_ego.py  run_s0.sh  run_s2.sh  run_s3.sh  setup_env.sh  train.sh
src/egosurgery/: train.py
src/research_template/: evaluate.py  train.py
tests/: test_datasets.py  test_delta.py  test_engines.py  test_metrics.py  test_models.py  test_pipeline.py  test_preprocess.py  test_s2_s3.py
(+183 files in other folders)
