[project]
name = "research-template"
version = "0.1.0"
description = "Research project template for deep learning and computer vision."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyyaml",
    "tqdm",
    "matplotlib",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
