[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egosurgery-multitask"
version = "0.1.0"
description = "EgoSurgery 上の術具検出・工程認識・関係推論を Ego/Exo マルチタスクで統合する CV 研究プロジェクト"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# 依存は PyPI から安全に解決できるものに限定する。
# torch / torchvision / mmcv / mmdet / mmengine / mamba-ssm / causal-conv1d は
# CUDA 版 wheel・ソースビルドが必要なため、ここには含めず README の
# 「推奨セットアップ」の手順で個別に導入すること。
dependencies = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "wandb>=0.16",
  "timm>=1.0",
  "peft>=0.13,<0.14",
  "transformers>=4.44,<4.45",  # mamba-ssm 2.2.2 の旧 generation API 互換のため固定
  "albumentations>=2.0",
  "opencv-python>=4.9",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "einops>=0.7",
  "tqdm>=4.66",
  "rich>=13.0",
  "pycocotools>=2.0.7",
  "numpy<2",  # torch 2.1 系の要件
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "black>=24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

# --------------------------------------------------------------------------- #
# ruff（lint。.claude/hooks/lint_changed.py が編集時に実行）
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # 行長はフォーマッタに委ね、lint では失敗させない

# --------------------------------------------------------------------------- #
# black（フォーマッタ）
# --------------------------------------------------------------------------- #
[tool.black]
line-length = 88
target-version = ["py311"]

# --------------------------------------------------------------------------- #
# coverage（make test の --cov=src/egosurgery 用）
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["src/egosurgery"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
